Backport 4.3: manager50 vzhestkov improve tuning guide #24741 (#3182)
* Improve tuning guide (#3155)
* Add salt connectivity special guide
Co-authored-by: Karl Eichwalder <ke@suse.de>
* Update modules/specialized-guides/pages/large-deployments/tuning.adoc
* Update modules/specialized-guides/pages/salt/salt-connectivity.adoc
Co-authored-by: Victor Zhestkov <vzhestkov@suse.com>

--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -67,6 +67,7 @@ endif::[]
 *** xref:salt/salt-ssh.adoc[Salt SSH]
 *** xref:salt/salt-rate-limiting.adoc[Rate Limiting]
 *** xref:salt/salt-scaling-minions.adoc[Scaling Minions]
+*** xref:salt/salt-connectivity.adoc[Salt Connectivity]
 ** xref:large-deployments/overview.adoc[Large Deployments Guide]
 *** xref:large-deployments/hardware-reqs.adoc[Hardware Requirements]
 *** xref:large-deployments/single-server.adoc[Single Server]
