Add note about usernames in PAM section (#3194) (#3199) (#3200)
* note about usernames in PAM section
https://github.com/SUSE/spacewalk/issues/24774
https://bugzilla.suse.com/show_bug.cgi?id=1227599

--- a/modules/administration/pages/auth-methods-pam.adoc
+++ b/modules/administration/pages/auth-methods-pam.adoc
@@ -5,6 +5,10 @@
 PAM is a suite of libraries that allows you to integrate {productname} with a centralized authentication mechanism, eliminating the need to remember multiple passwords.
 {productname} supports LDAP, Kerberos, and other network-based authentication systems using PAM.
 
+[NOTE]
+====
+In usernames, additionally to alphanumeric characters, [literal]``-``, [literal]``_``, [literal]``.``, and [literal]``@`` are allowed.
+====
 
 
 .Procedure: Enabling PAM
