--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -468,7 +468,7 @@ These exporters can be installed on managed systems:
 
 [NOTE]
 ====
-On {micro}, only the Node exporter and the Blackbox exporter are available.
+On {sle-micro}, only the Node exporter and the Blackbox exporter are available.
 ====
 
 When you have the exporters installed and configured, you can start using Prometheus to collect metrics from monitored systems.
