--- a/modules/client-configuration/pages/supported-features-sl-micro.adoc
+++ b/modules/client-configuration/pages/supported-features-sl-micro.adoc
@@ -23,11 +23,11 @@ The icons in this table indicate:
 
 
 [cols="1,1", options="header"]
-.Supported Features on {micro} Operating Systems
+.Supported Features on {sle-micro} Operating Systems
 |===
 
 | Feature
-| {micro}
+| {sle-micro}
 
 | Client
 | {salt}
