--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -52,7 +52,7 @@ The operating system running on a client is supported by the organization that s
 | {check}
 | {check}
 
-| {micro}
+| {sle-micro}
 | {x86_64}, {aarch64}, {s390x}
 | {cross}
 | {check}
