--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -35,7 +35,7 @@ For non-{suse} operating systems, including {rhel}, {centos}, and {oracle}, only
 | {check}
 | {check}
 
-| {micro}
+| {sle-micro}
 | {x86_64}, {aarch64}, {s390x}
 | {cross}
 | {check}
