--- a/modules/client-configuration/pages/supported-features-sle-micro.adoc
+++ b/modules/client-configuration/pages/supported-features-sle-micro.adoc
@@ -1,16 +1,16 @@
 [[supported-features-sle-micro]]
-= Supported {micro} Client Features
+= Supported {sle-micro} Client Features
 
 
 [IMPORTANT]
 ====
 The operating system you run on a client is supported by the organization that supplies the operating system.
-{micro} is supported by {suse}.
+{sle-micro} is supported by {suse}.
 ====
 
 [IMPORTANT]
 ====
-{micro} is only supported as regular minion ([systemitem]``default`` contact method) for the time being. We are working on managing it as Salt SSH client ([systemitem]``salt-ssh`` contact method), too.
+{sle-micro} is only supported as regular minion ([systemitem]``default`` contact method) for the time being. We are working on managing it as Salt SSH client ([systemitem]``salt-ssh`` contact method), too.
 ====
 
 The icons in this table indicate:
@@ -23,11 +23,11 @@ The icons in this table indicate:
 
 
 [cols="1,1", options="header"]
-.Supported Features on {micro} Operating Systems
+.Supported Features on {sle-micro} Operating Systems
 |===
 
 | Feature
-| {micro}
+| {sle-micro}
 
 | Client
 | {salt}
@@ -164,4 +164,4 @@ Basic virtual guest management includes listing VMs, slow refresh, VM lifecycle 
 
 Advanced virtual guest management includes all features of Basic virtual guest management plus fast refresh, VM lifecycle actions (delete, reset, power off), modifying VM disk, network, graphical display, and graphical display configuration.
 
-{star}{star} On {micro}, only the Node exporter and the Blackbox exporter are available.
+{star}{star} On {sle-micro}, only the Node exporter and the Blackbox exporter are available.
