--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -21,7 +21,6 @@ They can be on-premise, or on public cloud, private cloud, hybrid cloud or even 
 If you cannot use the {productname} {webui}, almost all functionality (with the exception of virtualization tasks) is available from the command prompt.
 All command line tools can be used with assistive technology tools.
 Text readers ``orca`` and ``espeak`` can be enabled in the Desktop Applications Module.
-Speech recognition ``mycroft-core`` and ``sphinx`` are available in PackageHub.
 Additionally, you can interact with {productname} using the XML-RPC API.
 
 * For more information about [command]``spacecmd``, see xref:reference:spacecmd-intro.adoc[].
@@ -35,6 +34,22 @@ ifeval::[{uyuni-content} == true]
 * For more information about the API, see https://www.uyuni-project.org/uyuni-docs-api/uyuni/index.html.
 endif::[]
 * For the latest information about all command line tools, see the release notes available from https://www.suse.com/releasenotes/.
+
+====
+
+[WARNING]
+====
+Speech recognition ``mycroft-core`` and ``sphinx`` are available in Package Hub.
+
+General updates and fixes to the packages in SUSE Package Hub are provided by the openSUSE community based on their discretion.
+
+ifeval::[{suma-content} == true]
+Packages from the Package Hub are delivered without L3 support from SUSE, though SUSE will monitor and ensure that any known critical security issues will be addressed. 
+Packages in the Package Hub are approved by SUSE for use with SUSE Linux Enterprise Server and to not interfere with the supportability of SUSE Linux Enterprise Server, its modules and extensions.
+endif::[]
+
+
+* For more information about Package Hub, see https://packagehub.suse.com/support/.
 
 ====
 
