--- a/modules/client-configuration/pages/package-management.adoc
+++ b/modules/client-configuration/pages/package-management.adoc
@@ -7,6 +7,7 @@ To manage packages on a client, navigate to [guimenu]``Systems``, click the clie
 The options available in this section vary depending on the type of client you have selected, and its current channel subscriptions.
 
 
+
 [IMPORTANT]
 ====
 When packages are installed or upgraded, licenses or EULAs are automatically accepted.
@@ -17,19 +18,7 @@ For more about action chains, see xref:reference:schedule/action-chains.adoc[].
 
 
 
-== Verify Packages
-
-You can check that packages you have installed on a client match the current state of the database they were installed from.
-The metadata of the installed package is compared to information in the database, including the file checksum, file size, permissions, owner, group, and type.
-
-.Procedure: Verifying Installed Packages
-. In the {productname} {webui}, navigate to [guimenu]``Systems``, click the client the package is installed on, and navigate to the menu:Systems[Software > Packages > Verify] subtab.
-. Select the packages you want to verify and click btn:[Verify Selected Packages].
-. When the verification is complete, navigate to menu:Systems[Events > History] to see the results.
-
-
-
-== Compare Packages
+== Compare Packages Using Profiles
 
 You can compare the packages installed on a client with a stored profile, or with packages installed on another client.
 When the comparison is made, you can choose to modify the selected client to match.
