URL in  ports: add installer #1229178 (#3262) (#3265)
* add installer-updates.suse.com
https://github.com/SUSE/spacewalk/issues/25075
https://bugzilla.suse.com/show_bug.cgi?id=1229178

--- a/modules/installation-and-upgrade/pages/ports.adoc
+++ b/modules/installation-and-upgrade/pages/ports.adoc
@@ -161,8 +161,9 @@ In most cases, you will not need to adjust these ports.
 There are some URLs that {productname} must be able to access to register clients and perform updates.
 In most cases, allowing access to these URLs is sufficient:
 
-* scc.suse.com
-* updates.suse.com
+* [literal]``scc.suse.com``
+* [literal]``updates.suse.com``
+* [literal]``installer-updates.suse.com``
 
 If you are using non-{suse} clients you might also need to allow access to other servers that provide specific packages for those operating systems.
 For example, if you have {ubuntu} clients, you will need to be able to access the {ubuntu} server.
