Add uyuni-storage-setup-server and uyuni-storage-setup-proxy packages to server/proxy deployment (#3271)
* Add uyuni-storage-setup-server and uyuni-storage-setup-proxy packages to server/proxy deployment

* Add changelog

* Apply suggestions from code review

Co-authored-by: Julio González Gil <4226070+juliogonzalez@users.noreply.github.com>

* Update CHANGELOG.md

Co-authored-by: Karl Eichwalder <ke@suse.de>

---------

Co-authored-by: Karl Eichwalder <ke@suse.de>
Co-authored-by: Julio González Gil <4226070+juliogonzalez@users.noreply.github.com>

--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-deployment-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-deployment-uyuni.adoc
@@ -160,7 +160,7 @@ Alternatively you may install [systemitem]``mgrpxy-zsh-completion`` or [systemit
 
 [source, shell]
 ----
-transactional-update pkg install mgrpxy mgrpxy-bash-completion
+transactional-update pkg install mgrpxy mgrpxy-bash-completion uyuni-storage-setup-proxy
 ----
 +
 
