--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/server-deployment-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/server-deployment-uyuni.adoc
@@ -69,7 +69,7 @@ zypper ref
 
 [source, shell]
 ----
-zypper in mgradm mgrctl mgradm-bash-completion mgrctl-bash-completion netavark
+zypper in mgradm mgrctl mgradm-bash-completion mgrctl-bash-completion netavark uyuni-storage-setup-server
 ----
 +
 
