--- a/modules/client-configuration/pages/autoinst-distributions.adoc
+++ b/modules/client-configuration/pages/autoinst-distributions.adoc
@@ -129,27 +129,40 @@ If you prefix an option with [literal]``!`` then the option will be removed from
 
 {productname} will manage the kernel options for both Profiles and Systems for you. As such you may only edit the kernel options for Distros.
 
-To achieve the desired result it is important to understand the process of how kernel options are being handled in {productname} and Cobbler:
+=== Examples
 
-. The user enters the kernel options as a single line of text.
-. {productname} converts this to a dictionary like structure that preserves the order of the kernel options.
-. This pre-processed structure is sent to Cobbler via XML-RPC.
-. Cobbler safes this as a Python dictionary (which is order preserving) and combines the four sources of kernel options.
-. Cobbler takes the combined dictionary and computes a single line of text to be passed to the kernel command line.
+==== Basic inheritance example
 
-Here there are some examples to ilustrate Cobbler inheritance:
+Distribution raw value
 
-----
-Distribution raw value:  install=http://uyuni.server/ks/dist/SLES15SP4 self_update=0
-Profile raw value: console=tty1
-System raw value: console=ttyS0
-Resolved value for a system inheriting this profile: install=http://uyuni.server/ks/dist/SLES15SP4 self_update=0 console=ttyS0
-----
+ install=http://uyuni.server/ks/dist/SLES15SP4 self_update=0
 
-----
-Distribution raw value:  install=http://uyuni.server/ks/dist/SLES15SP4 self_update=0
-Profile raw value: console=tty1
-System raw value: !self_update
-Resolved value for a system inheriting this profile: install=http://uyuni.server/ks/dist/SLES15SP4 console=ttyS0
-----
+Profile raw value
 
+ console=tty1
+
+System raw value
+
+ console=ttyS0
+
+*Resolved* value for a system inheriting this profile
+
+ install=http://uyuni.server/ks/dist/SLES15SP4 self_update=0 console=ttyS0
+
+==== Option removal example
+
+Distribution raw value
+
+ install=http://uyuni.server/ks/dist/SLES15SP4 self_update=0
+
+Profile raw value
+
+ console=tty1
+
+System raw value
+
+ !self_update
+
+*Resolved* value for a system inheriting this profile
+
+ install=http://uyuni.server/ks/dist/SLES15SP4 console=ttyS0
