Manager43 iau ports cleanup#1217338 (#3267)
* delete partially outdated image with ports listing
https://github.com/SUSE/spacewalk/issues/25077
https://bugzilla.suse.com/show_bug.cgi?id=1217338
* 443 for clients
* cobbler

--- a/modules/installation-and-upgrade/pages/ports.adoc
+++ b/modules/installation-and-upgrade/pages/ports.adoc
@@ -6,9 +6,9 @@ This section contains a comprehensive list of ports that are used for various co
 You will not need to open all of these ports.
 Some ports only need to be opened if you are using the service that requires them.
 
-This image shows the main ports used in {productname}:
+// This image shows the main ports used in {productname}:
 
-image::ports_diagram.png[]
+// image::ports_diagram.png[]
 
 
 
@@ -54,14 +54,13 @@ Opening these ports allows network traffic from the {productname} Server to comm
 Port 80 is not used to serve the {webui}.
 | 443         | TCP | HTTPS      | Required for {scc}.
 | 5269        | TCP | jabberd    | Required to push actions to and from a proxy.
-| 25151       | TCP | Cobbler    |
 |===
 
 
 
 == Internal Server Ports
 
-Internal port are used internally by the {productname} Server.
+Internal ports are used internally by the {productname} Server.
 Internal ports are only accessible from [literal]``localhost``.
 
 In most cases, you will not need to adjust these ports.
@@ -76,6 +75,7 @@ In most cases, you will not need to adjust these ports.
 | 8009        | Tomcat to Apache HTTPD (AJP).
 | 8080        | Tomcat to Apache HTTPD (HTTP).
 | 9080        | Salt-API, used by the RHN application in Tomcat and Taskomatic.
+| 25151       | Cobbler's XMLRPC API
 | 32000       | Port for a TCP connection to the Java Virtual Machine (JVM) that runs Taskomatic and satellite-search.
 |===
 
@@ -146,6 +146,7 @@ In most cases, you will not need to adjust these ports.
 | Port number | Direction | Protocol | Notes
 | 22          | Inbound   | SSH      | Required for ssh-push and ssh-push-tunnel contact methods.
 | 80          | Outbound  |          | Used to reach the server or proxy.
+| 443         | Outbound  |          | Used to reach the server or proxy.
 | 5222        | Outbound  | TCP      | Required to push OSAD actions to the server or proxy.
 | 9090        | Outbound  | TCP      | Required for Prometheus user interface.
 | 9093        | Outbound  | TCP      | Required for Prometheus alert manager.
