--- a/modules/installation-and-upgrade/pages/ports.adoc
+++ b/modules/installation-and-upgrade/pages/ports.adoc
@@ -51,14 +51,13 @@ Opening these ports allows network traffic from the {productname} Server to comm
 | 80          | TCP | HTTP       | Required for {scc}.
 Port 80 is not used to serve the {webui}.
 | 443         | TCP | HTTPS      | Required for {scc}.
-| 25151       | TCP | Cobbler    |
 |===
 
 
 
 == Internal Server Ports
 
-Internal port are used internally by the {productname} Server.
+Internal ports are used internally by the {productname} Server.
 Internal ports are only accessible from [literal]``localhost``.
 
 In most cases, you will not need to adjust these ports.
@@ -73,6 +72,7 @@ In most cases, you will not need to adjust these ports.
 | 8009        | Tomcat to Apache HTTPD (AJP).
 | 8080        | Tomcat to Apache HTTPD (HTTP).
 | 9080        | Salt-API, used by the RHN application in Tomcat and Taskomatic.
+| 25151       | Cobbler's XMLRPC API
 | 32000       | Port for a TCP connection to the Java Virtual Machine (JVM) that runs Taskomatic and satellite-search.
 |===
 
@@ -140,6 +140,7 @@ In most cases, you will not need to adjust these ports.
 | Port number | Direction | Protocol | Notes
 | 22          | Inbound   | SSH      | Required for ssh-push and ssh-push-tunnel contact methods.
 | 80          | Outbound  |          | Used to reach the server or proxy.
+| 443         | Outbound  |          | Used to reach the server or proxy.
 | 9090        | Outbound  | TCP      | Required for Prometheus user interface.
 | 9093        | Outbound  | TCP      | Required for Prometheus alert manager.
 | 9100        | Outbound  | TCP      | Required for Prometheus node exporter.
