Apply suggestions from code review

--- a/modules/client-configuration/pages/autoinst-distributions.adoc
+++ b/modules/client-configuration/pages/autoinst-distributions.adoc
@@ -118,7 +118,8 @@ There are three object types that are relevant for this:
 . Systems
 
 As a fourth special point of influence on the final kernel options is the Cobbler settings file [path]``/etc/cobbler/settings.yaml``.
-The Cobbler settings file defines default kernel options for all distributions. This is not supported in the context of {productname}.
+The Cobbler settings file defines default kernel options for all distributions.
+This is not supported in the context of {productname}.
 
 Understanding raw and resolved values is crucial for managing kernel options effectively.
 
@@ -127,42 +128,59 @@ Understanding raw and resolved values is crucial for managing kernel options eff
 
 If you prefix an option with [literal]``!`` then the option will be removed from the final kernel command line.
 
-{productname} will manage the kernel options for both Profiles and Systems for you. As such you may only edit the kernel options for Distros.
+{productname} will manage the kernel options for both Profiles and Systems for you.
+As such you may only edit the kernel options for Distros.
 
 === Examples
 
-==== Basic inheritance example
+==== Basic Inheritance Example
 
 Distribution raw value
 
- install=http://uyuni.server/ks/dist/SLES15SP4 self_update=0
+----
+install=http://uyuni.server/ks/dist/SLES15SP4 self_update=0
+----
 
 Profile raw value
 
- console=tty1
+----
+console=tty1
+----
 
 System raw value
 
- console=ttyS0
+----
+console=ttyS0
+----
 
 *Resolved* value for a system inheriting this profile
 
- install=http://uyuni.server/ks/dist/SLES15SP4 self_update=0 console=ttyS0
+----
+install=http://uyuni.server/ks/dist/SLES15SP4 self_update=0 console=ttyS0
+----
 
-==== Option removal example
+==== Option Removal Example
 
 Distribution raw value
 
- install=http://uyuni.server/ks/dist/SLES15SP4 self_update=0
+----
+install=http://uyuni.server/ks/dist/SLES15SP4 self_update=0
+----
 
 Profile raw value
 
- console=tty1
+----
+console=tty1
+----
 
 System raw value
 
- !self_update
+----
+!self_update
+----
 
 *Resolved* value for a system inheriting this profile
 
- install=http://uyuni.server/ks/dist/SLES15SP4 console=ttyS0
+----
+install=http://uyuni.server/ks/dist/SLES15SP4 console=ttyS0
+----
