persistent storage; container full disk https://github.com/SUSE/spacewalk/issues/24512

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -196,8 +196,8 @@ transactional-update
 
 === Configure Custom Persistent Storage
 
-This step is optional.
-However, if custom persistent storage is required for your infrastructure, use the [command]``mgr-storage-server`` tool.
+Configuring persistent storage is optional, but the only way to avoid serious trouble with container full disk conditions.
+It ist highly recommended to configure custom persistent storage with the [command]``mgr-storage-server`` tool.
 
 * For more information, see [command]``mgr-storage-server --help``.
 This tool simplifies creating the container storage and database volumes.
