uyuni server migration legacy to container (#3270)
* uyuni server migration
https://github.com/SUSE/spacewalk/issues/24769

* Add uyuni-storage-setup-server and uyuni-storage-setup-proxy packages to server/proxy deployment (#3271)

* Add uyuni-storage-setup-server and uyuni-storage-setup-proxy packages to server/proxy deployment

* Add changelog

* Apply suggestions from code review

Co-authored-by: Julio González Gil <4226070+juliogonzalez@users.noreply.github.com>

* Update CHANGELOG.md

Co-authored-by: Karl Eichwalder <ke@suse.de>

---------

Co-authored-by: Karl Eichwalder <ke@suse.de>
Co-authored-by: Julio González Gil <4226070+juliogonzalez@users.noreply.github.com>

* remove server migration uyuni

* remove server migration uyuni

* unify labels

* fix ID

* one more ID

* ucf (#3272)

---------

Co-authored-by: Raúl Osuna <rosuna@suse.com>
Co-authored-by: Julio González Gil <4226070+juliogonzalez@users.noreply.github.com>

--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-deployment-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-deployment-uyuni.adoc
@@ -160,7 +160,7 @@ Alternatively you may install [systemitem]``mgrpxy-zsh-completion`` or [systemit
 
 [source, shell]
 ----
-transactional-update pkg install mgrpxy mgrpxy-bash-completion
+transactional-update pkg install mgrpxy mgrpxy-bash-completion uyuni-storage-setup-proxy
 ----
 +
 
@@ -263,7 +263,7 @@ For more information about existing or custom certificates and the concept of co
 
 image::suma_proxy_containerized_webui.png[scaledwidth=80%]
 
-[[proxy-setup-containers-transfer-config]]
+[[proxy-install-containers-transfer-config]]
 == Transfer the Proxy Configuration
 
 The {webui} generates a configuration archive.
@@ -292,12 +292,12 @@ mgrpxy install podman config.tar.gz
 
 
 
-[[proxy-setup-containers-transfer-start]]
+[[proxy-install-containers-transfer-start]]
 == Start the {productname} {productnumber} Proxy
 
 Container can now be started with the [literal]`mgrpxy` command:
 
-[[proc-setup-containers-setup-start]]
+[[proc-install-containers-setup-start]]
 .Task: Start and Check Proxy Status
 
 . Start the Proxy by calling:
