--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/migrate-uyuni-to-a-container.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/migrate-uyuni-to-a-container.adoc
@@ -1,22 +1,38 @@
-= Migrating  the {productname} server to a containerized environment
+= Migrating  the {productname} Server to a Containerized Environment
 ifeval::[{suma-content} == true]
 :noindex:
 endif::[]
 
-To migrate a regular {productname} server to a container, a new machine is required.
+To migrate a legacy {productname} Server (RPM installation) to a container, a new machine is required.
 
 [WARNING]
 ====
 It is not possible to perform an in-place migration.
 ====
 
+[IMPORTANT]
+====
+Self trusted GPG keys are not migrated.
+GPG keys that are trusted in the RPM database only are not migrated.
+Thus synchronizing channels with [command]``spacewalk-repo-sync`` can fail.
+
+The administrator must migrate these keys manually from the 4.3 installation to the container host after the actual server migration.
+
+1. Copy the keys from the 4.3 server to the container host of the new server.
+2. Later, add each key to the migrated server with the command [command]``mgradm gpg add <PATH_TO_KEY_FILE>``.
+====
+
+
 The migration procedure currently does not include any hostname renaming functionality.
 The fully qualified domain name (FQDN) on the new server will remain identical to that on the old server.
 Therefore, following migration, it will be necessary to manually adjust the DNS records to point to the new server.
 
-.Procedure: Initial preparation
 
-. Stop the {productname} services on the old server:
+== Initial Preparation on the Legacy Server
+
+.Procedure: Initial preparation on the legacy server
+
+. Stop the {productname} services:
 +
 
 ----
@@ -32,23 +48,121 @@ systemctl stop postgresql
 
 
 
+== Prepare the SSH Connection
+
 .Procedure: Preparing the SSH connection
 
-. The SSH configuration and agent should be ready on the new host for a passwordless connection to the oldserver.
+. Ensure that for [systemitem]``root`` an SSH key exists on the new {productnumber} server.
+  If a key does not exist, create it with:
++
+
+----
+ssh-keygen -t rsa
+----
+
+. The SSH configuration and agent should be ready on the new server host for a passwordless connection to the legacy server.
 +
 
 [NOTE]
 ====
-To establish a passwordless connection, the migration script relies on an SSH agent running on the server.
-If the SSH agent is not active yet, initiate it by running `eval $(ssh-agent)`. Then, add the SSH key to the running agent with `ssh-add /path/to/the/private/key`. You will be prompted to enter the password for the private key during this process.
+To establish a passwordless connection, the migration script relies on an SSH agent running on the new server.
+If the agent is not active yet, initiate it by running [command]``eval $(ssh-agent)``.
+Then add the SSH key to the running agent with [command]``ssh-add`` followed by the path to the private key.
+You will be prompted to enter the password for the private key during this process.
 ====
 
-. The migration script only uses the old server's FQDN in the SSH command.
+. Copy the public SSH key to the legacy {productname} Server ([literal]``<oldserver.fqdn>``) with [command]``ssh-copy-id``.
+  Replace [literal]``<oldserver.fqdn>`` with the FQDN of the legacy server:
++
 
-. This means that every other configuration required to connect needs to be defined in the [systemfile]``~/.ssh/config`` file.
+----
+ssh-copy-id <oldserver.fqdn>
+----
++
+
+  The SSH key will be copied into the legacy server's [path]``~/.ssh/authorized_keys`` file.
+  For more information, see the [literal]``ssh-copy-id`` manpage.
+
+. Establish an SSH connection from the new server to the legacy {productname} Server to check that no password is needed.
+  Also there must not by any problem with the host fingerprint.
+  In case of trouble, remove old fingerprints from the [path]``~/.ssh/known_hosts`` file.
+  Then try again.
+  The fingerprint will be stored in the local [path]``~/.ssh/known_hosts`` file.
 
 
 
+== Perform the Migration
+
+[IMPORTANT]
+====
+When planning your migration from a legacy {productname} to a containerized {productname}, ensure that your target instance meets or exceeds the specifications of the old setup.
+This includes, but is not limited to, [literal]``Memory (RAM)``, [literal]``CPU Cores``, [literal]``Storage``, and [literal]``Network Bandwidth``.
+====
+
+.Procedure: Performing the Migration
+. This step is optional.
+If custom persistent storage is required for your infrastructure, use the [command]``mgr-storage-server`` tool.
+** For more information, see [command]``mgr-storage-server --help``.
+This tool simplifies creating the container storage and database volumes.
+
+** Use the command in the following manner:
++
+
+----
+mgr-storage-server <storage-disk-device> [<database-disk-device>]
+----
++
+For example:
++
+----
+mgr-storage-server /dev/nvme1n1 /dev/nvme2n1
+----
++
+
+[NOTE]
+====
+This command will create the persistent storage volumes at [path]``/var/lib/containers/storage/volumes``.
+
+For more information, see xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[].
+====
+. Execute the following command to install a new {productname} server.
+  Replace [literal]``<oldserver.fqdn>`` with the FQDN of the legacy server:
++
+
+----
+mgradm migrate podman <oldserver.fqdn>
+----
+
+. Migrate trusted SSL CA certificates.
+
+
+[IMPORTANT]
+====
+Trusted SSL CA certificates that were installed as part of an RPM and stored on a legacy {productname} in the [path]``/usr/share/pki/trust/anchors/`` directory will not be migrated.
+Because {suse} does not install RPM packages in the container, the administrator must migrate these certificate files manually from the legacy installation after migration:
+
+
+. Copy the file from the legacy server to the new server.
+   For example, as [path]``/local/ca.file``.
+
+. Copy the file into the container with:
++
+
+----
+mgradm cp /local/ca.file server:/etc/pki/trust/anchors/
+----
+====
+
+
+[IMPORTANT]
+====
+After successfully running the [command]``mgradm migrate`` command, the {salt} setup on all clients will still point to the old legacy server.
+
+To redirect them to the {productnumber} server, it is required to rename the new server at the infrastructure level (DHCP and DNS) to use the same Fully Qualified Domain Name and IP address as legacy server.
+====
+
+
+// FIXME: check the following!  Partially probably already covered above.!
 == Prepare for Kubernetes
 
 Before executing the migration with [command]``mgradm migrate`` command, it is essential to predefine **Persistent Volumes**, especially considering that the migration job initiates the container from scratch.
