Apply suggestions from code review
Co-authored-by: Ondřej Holeček <oholecek@suse.com>

--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -30,7 +30,7 @@ ifeval::[{uyuni-content} == true]
 **** xref:install-uyuni.adoc[Install Uyuni Server with openSUSE]
 *** Proxy
 **** xref:container-deployment/uyuni/proxy-container-setup-uyuni.adoc[Proxy Preparation]
-**** xref:container-deployment/uyuni/proxy-deployment-uyuni.adoc[Deploy on {leap}]
+**** xref:container-deployment/uyuni/proxy-deployment-uyuni.adoc[Deploy on {leapmicro}]
 **** xref:container-deployment/uyuni/proxy-k3s-deployment-uyuni.adoc[Deploy on K3s]
 *** Install the Proxy (Legacy)
 **** xref:install-proxy-uyuni.adoc[Install Uyuni Proxy with openSUSE]
