--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-deployment-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-deployment-uyuni.adoc
@@ -126,7 +126,7 @@ zypper ref
 
 [source, shell]
 ----
-zypper in mgradm mgrctl mgradm-bash-completion mgrctl-bash-completion netavark uyuni-storage-setup-server
+zypper in mgrpxy mgrpxy-bash-completion uyuni-storage-setup-proxy
 ----
 +
 
